# aws-tui

./: .gitignore  Cargo.toml  sample_aliases
gui/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
gui/src/: app.css  app.html  tui.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: aws.rs  aws_config.rs  commands.rs  config.rs  lib.rs  main.rs  model.rs  parser.rs  pty.rs  sessions.rs
gui/src/lib/: fonts.ts  ipc.ts  nav.ts  sessions-helpers.ts  types.ts  utils.ts
gui/src/lib/components/: command-palette.svelte  confirm-modal.svelte  credentials-modal.svelte  data-table.svelte  pty-terminal.svelte  status-dot.svelte
gui/src/lib/components/app-shell/: page-header.svelte  sidebar.svelte  topbar.svelte
gui/src/lib/components/sessions/: session-detail.svelte  session-list.svelte
gui/src/lib/components/ui/: badge.svelte  button.svelte  card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte  dialog-content.svelte  dialog-footer.svelte  dialog.svelte  (+17 more)
gui/src/lib/stores/: aws.ts
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/routes/containers/: +page.svelte
gui/src/routes/instances/: +page.svelte
gui/src/routes/settings/: +page.svelte
gui/src/routes/terminal/: +page.svelte
src/: app.rs  completer.rs  containers.rs  events.rs  instances.rs  main.rs  parser.rs  session.rs  terminal.rs  ui.rs
src/ui/: containers.rs  instances.rs  mod.rs  sessions.rs  terminal.rs
