[package]
name = "aws-tui-gui"
version = "0.1.0"
description = "AWS TUI — desktop GUI"
authors = ["aws-tui contributors"]
edition = "2021"

[lib]
name = "aws_tui_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
